2005-12-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* g++.old-deja/g++.oliva/stkalign.C: Remove xfail.

2005-12-14  Ben Elliston  <bje@au.ibm.com>

	* gcc.dg/warn-addr-cmp.c: New test.

2005-12-13  Jakub Jelinek  <jakub@redhat.com>

	PR debug/25023
	PR target/25293
	* gcc.target/i386/pr25293.c: New test.

2005-12-13  Petr Machata  <machata@post.cz>

	PR c++/24907
	* g++.dg/parse/comma2.C: New test.

2005-12-13  Mark Mitchell  <mark@codesourcery.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/compat/struct-layout-1.exp: Do not link with libiberty.
	* g++.dg/compat/struct-layout-1_generate.c (config.h): Do not include.
	(limits.h): Include unconditionally.
	(stdlib.h): Likewise.
	(hashtab.h): Do not include.
	(getopt.h): Likewise.
	(stddef.h): Include.
	(hashval_t): Define.
	(struct entry): Add "next" field.
	(HASH_SIZE): New macro.
	(hash_table): New variable.
	(switchfiles): Do not use xmalloc.
	(mix): New macro.
	(iterative_hash): New function.
	(hasht): Remove.
	(e_exists): New function.
	(e_insert): Likewise.
	(output): Use, instead of libiberty hashtable functions.
	(main): Do not use getopt.  Do not call htab_create.

2005-12-13  Jakub Jelinek  <jakub@redhat.com>

	PR c++/25331
	* gcc.dg/compat/struct-layout-1_generate.c (subfield): Don't
	put atal* and atpaal* attributes on array elements.
	(generate_fields): Revert 2005-10-07 and 2005-10-11 changes.
	* g++.dg/compat/struct-layout-1_generate.c (subfield): Don't
	put atal* and atpaal* attributes on array elements.
	(generate_fields): Don't prevent atal* attribute on ETYPE_ARRAY.

2005-12-13  Carlos O'Donell <carlos@codesourcery.com>

	* gcc.dg/single-precision-constant.c: New test.

2005-12-13  Alan Modra  <amodra@bigpond.net.au>

	* gcc.dg/980523-1.c, gcc.dg/980526-1.c, gcc.dg/20020103-1.c,
	gcc.dg/20040625-1.c, gcc.dg/asm-b.c, gcc.dg/iftrap-1.c,
	gcc.dg/iftrap-2.c, gcc.dg/simd-3.c, gcc.dg/switch-1.c,
	gcc.dg/tree-ssa/bool-1.c, gcc.dg/tree-ssa/bool-2.c,