@@ -1,3 +1,8 @@
+2005-12-14  David Billinghurst  (David.Billinghurst@riotinto.com)
+
+	* lib/fortran-torture.exp:  Catch remaining uses of 
+	remote_file build delete. 
+
 2005-12-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* g++.old-deja/g++.oliva/stkalign.C: Remove xfail.
